--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -1,14 +1,16 @@
 <div class="bg-white">
-    <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
-      <h2 class="sr-only">Products</h2>
-  
-      <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
-        @for (product of products(); track product.id) {
-            <app-product-card [productData]="product" />
+  <div class="mx-auto max-w-2xl px-4 py-8 sm:px-6 sm:py-8 lg:max-w-7xl lg:px-8">
+    <div
+      class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
+      @if (isLoading()) {
+        @for (skeleton of [].constructor(16); track $index) {
+          <app-product-skeleton />
         }
-  
-        <!-- More products... -->
-      </div>
+      } @else {
+        @for (product of products(); track product.id) {
+          <app-product-card [productData]="product" />
+        }
+      }
     </div>
   </div>
-  
+</div>
