ngRX store for cart and stock handling. Add to cart started

--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -7,7 +7,7 @@
           <app-product-skeleton />
         }
       } @else {
-        @for (product of products(); track product.id) {
+        @for (product of products$ | async; track product.id) {
           <app-product-card [productData]="product" />
         }
       }
