--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,1 +1,30 @@
-<p>cart works!</p>
+<div class="bg-white">
+    <div class="mx-auto max-w-2xl px-4 py-8 sm:px-6 sm:py-8 lg:max-w-7xl lg:px-8">
+        <div class="flow-root my-8">
+            <ul role="list" class="-my-6 divide-y divide-gray-200">
+                @for (item of cartItems(); track $index) {
+                <app-cart-item-row [item]="item" />
+                }
+            </ul>
+        </div>
+        <div class="border-t border-gray-200 py-6">
+            <div class="flex justify-between text-base font-medium text-gray-900">
+              <p>Subtotal</p>
+              <p>$262.00</p>
+            </div>
+            <p class="mt-0.5 text-sm text-gray-500">Shipping and taxes calculated at checkout.</p>
+            <div class="mt-6">
+              <a href="#" class="flex items-center justify-center rounded-md border border-transparent bg-indigo-700 px-6 py-3 text-base font-medium text-white shadow-xs hover:bg-indigo-800">Checkout</a>
+            </div>
+            <div class="mt-6 flex justify-center text-center text-sm text-gray-500">
+              <p>
+                or
+                <button type="button" class="font-medium text-indigo-700 hover:text-indigo-500">
+                  Continue Shopping
+                  <span aria-hidden="true"> &rarr;</span>
+                </button>
+              </p>
+            </div>
+          </div>
+    </div>
+</div>
