--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -2,12 +2,12 @@
   <div class="mx-auto max-w-2xl px-4 py-8 sm:px-6 sm:py-8 lg:max-w-7xl lg:px-8">
     <div
       class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
-      @if (isLoading()) {
+      @if (productsLoading()) {
         @for (skeleton of [].constructor(16); track $index) {
           <app-product-skeleton />
         }
       } @else {
-        @for (product of products$ | async; track product.id) {
+        @for (product of products(); track product.id) {
           <app-product-card [productData]="product" />
         }
       }
