--- a/src/app/pages/_layout/layout.component.html
+++ b/src/app/pages/_layout/layout.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-full">
+<div class="min-h-screen">
   <nav class="bg-indigo-950">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
       <div class="flex h-16 items-center justify-between">
@@ -23,22 +23,13 @@
           <div class="ml-4 flex items-center md:ml-6">
             <button
               type="button"
-              class="relative rounded-full bg-indigo-950 p-1 text-gray-400 hover:text-white focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800 focus:outline-hidden">
-              <span class="absolute -inset-1.5"></span>
-              <span class="sr-only">View notifications</span>
-              <svg
-                class="size-6"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                aria-hidden="true"
-                data-slot="icon">
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
-              </svg>
+              routerLink="/cart"
+              class="relative rounded-full bg-indigo-950 p-1 text-gray-400 hover:text-white cursor-pointer">
+              <app-icon-cart class="size-6" />
+              <div
+                class="absolute inline-flex items-center justify-center w-6 h-6 text-xs font-bold text-white bg-sky-500 border-2 border-white rounded-full -top-2 -end-2 dark:border-gray-900">
+                {{ cartItemsCount() }}
+              </div>
             </button>
           </div>
         </div>
