--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,7 @@
     @apply bg-indigo-700 hover:bg-indigo-800 text-white font-medium transition rounded;
   }
 }
+
+.aldi-toast.toast-info {
+  @apply bg-indigo-700 text-white transition rounded font-extralight shadow-none!;
+}
