--- a/src/app/components/cart-content/cart-content.component.html
+++ b/src/app/components/cart-content/cart-content.component.html
@@ -8,7 +8,7 @@
 <div class="border-t border-gray-200 py-6">
   <div class="flex justify-between text-base font-medium text-gray-900">
     <p>Subtotal</p>
-    <p>{{ cartSubTotal() | currency }}</p>
+    <p>{{ cartSubTotal() | huf }}</p>
   </div>
   <p class="mt-0.5 text-sm text-gray-500">
     Shipping and taxes calculated at checkout.
