--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -8,7 +8,9 @@
         }
       } @else {
         @for (product of products(); track product.id) {
-          <app-product-card [productData]="product" />
+          <app-product-card
+            [appOutOfStockOverlay]="product.id"
+            [productData]="product" />
         }
       }
     </div>
