--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,19 +1,19 @@
 <a class="group block">
   <div class="overflow-hidden relative">
     <img
-      [appFallbackImage]="productData().name"
-      [src]="productData().img"
-      alt="{{ productData().name }} image"
+      [appFallbackImage]="product().name"
+      [src]="product().img"
+      alt="{{ product().name }} image"
       class="aspect-square w-full rounded-lg bg-gray-200 object-cover hover:opacity-75 xl:aspect-[7/8] transform hover:scale-125 transition-transform duration-300 peer" />
   </div>
   <h3
     class="mt-4 text-sm text-indigo-800 font-medium leading-tight truncate"
-    [title]="productData().name">
-    {{ productData().name }}
+    [title]="product().name">
+    {{ product().name }}
   </h3>
   <div class="flex justify-between items-end mt-2">
     <p class="text-lg font-light text-gray-900">
-      {{ productData().price | huf }}
+      {{ product().price | huf }}
     </p>
 
     <div class="flex flex-row items-center gap-2">
