--- a/src/app/components/cart-content/cart-content.component.html
+++ b/src/app/components/cart-content/cart-content.component.html
@@ -15,7 +15,7 @@
   </p>
   <div class="mt-6">
     <a
-      href="#"
+      href=""
       class="flex items-center justify-center rounded-md border border-transparent shop-button px-6 py-3 text-base font-medium text-white shadow-xs"
       >Checkout</a
     >
