--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,6 +1,6 @@
 <div class="bg-white">
   <div class="mx-auto max-w-2xl px-4 py-8 sm:px-6 sm:py-8 lg:max-w-7xl lg:px-8">
-    @if (cartItemQuantity() === 0) {
+    @if (isCartEmpty()) {
       <app-cart-empty />
     } @else {
       <app-cart-content />
