--- a/src/app/shared/ui/product-skeleton/product-skeleton.component.html
+++ b/src/app/shared/ui/product-skeleton/product-skeleton.component.html
@@ -1,4 +1,4 @@
-<div class="animate-pulse">
+<div aria-hidden="true" class="animate-pulse">
   <div
     class="aspect-square w-full rounded-lg bg-gray-200 xl:aspect-[7/8]"></div>
   <div class="mt-4 h-4 w-3/4 rounded bg-gray-300"></div>
